Bug 314546 - Polygon fill errors for objects spanning the IDL
Summary: Polygon fill errors for objects spanning the IDL
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.6 (KDE 4.11)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Thibaut Gridel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-06 18:57 UTC by Dennis Nienhüser
Modified: 2013-04-13 20:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dennis Nienhüser 2013-02-06 18:57:45 UTC
Use e.g. the annotate plugin to draw a polygon spanning the IDL. The filling will be wrong.
Comment 1 Thibaut Gridel 2013-04-13 20:17:54 UTC
Git commit bb92970f93b4463b30dff9a8bdb7f49ccd63fc9b by Thibaut Gridel.
Committed on 13/04/2013 at 22:15.
Pushed by tgridel into branch 'master'.

GeoGraphicsScene: use internal cache for geodatafeatures

During item change, one should not infer which was the TileId before
the update.

M  +8    -25   src/lib/GeoGraphicsScene.cpp

http://commits.kde.org/marble/bb92970f93b4463b30dff9a8bdb7f49ccd63fc9b