GeoGraphicsScene: use internal cache for geodatafeatures

During item change, one should not infer which was the TileId before
the update.
BUG: 314546